objects/TEXTeamMember__c.object
<CustomObject>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Front Office TEX Reviewer</fullName>
                </value>
                <value>
                    <fullName>Strategic Account Executive</fullName>
                </value>
                <value>
                    <fullName>Other/Informed</fullName>
                </value>
                <value>
                    <fullName>Account Manager / KAM / GAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_ExpertAssessmentCompleted__c</fullName>
        <label>TECH_ExpertAssessmentCompleted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TECH_ExpertAssessmentReviewed__c</fullName>
        <label>TECH_ExpertAssessmentReviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TECH_IamTeamMember__c</fullName>
        <formula>TeamMember__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_IamTeamMember</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_TEXReportDeliveredtoCustomer__c</fullName>
        <label>TECH_TEXReportDeliveredtoCustomer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TECH_UniqueField__c</fullName>
        <label>TECH_UniqueField</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TEX__c</fullName>
        <label>TEX</label>
        <referenceTo>TEX__c</referenceTo>
        <relationshipLabel>TEX Team Members</relationshipLabel>
        <relationshipName>TEXTeamMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TEXTeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TEX Team Member</label>
    <nameField>
        <displayFormat>TEXT-{0}</displayFormat>
        <label>TEX Team Member Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TEX Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>